# fretka

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
skills/: SKILL.md
src/: main.rs  types.rs
src/engine/: arxiv.rs  brave.rs  duckduckgo.rs  mod.rs
src/fetcher/: mod.rs
src/formatter/: json.rs  markdown.rs
src/installer/: mod.rs
src/truncator/: max_length.rs  mod.rs
