[package]
name = "fretka"
version = "0.2.0"
edition = "2024"
description = "A web-search CLI for coding agents"
license = "MIT"
repository = "https://github.com/cezary17/fretka"
keywords = ["search", "cli", "web-search", "agent"]
categories = ["command-line-utilities"]
exclude = [".github/", "CLAUDE.md", "skills/"]

[dependencies]
reqwest = {version = "0.13.2", features = ["form"]}
clap = {version = "4", features = ["derive"]}
scraper = "0.25.0"
tokio = {version = "1.50.0", features = ["full"]}
dom_smoothie = "0.16"
futures = "0.3"

[dev-dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
